# moderntensor_core_blockchain

./: .dockerignore  .env  .gitignore  .gitmodules  LEGACY_CLEANUP_SUMMARY.md  Move.toml  README.md  README_APTOS.md  README_CORE.md  check_entities_keys.py  check_old_contract.py  check_registered_endpoints.py  cleanup_project.py  find_keys.py  get_all_registered.py  import_key.py  new_miner_key  new_miner_key.pub  official_metagraph_snapshot.json  protected_files.json  pyproject.toml  pytest.ini  quick_cleanup.py  quick_key_check.py  regenerate_all_keys.py  register_miner.py  requirements.txt  sdk 2  setup.py  test_metagraph_core.py  test_metagraph_detailed.py  test_metagraph_integration.py  test_strict_consensus.py  test_wallet.py  update_metagraph_for_core.py  verify_improvements.py
.github/workflows/: python-package.yml
aptos_core/: __init__.py  contract_client.py
aptos_migration/contracts/: Move.toml
aptos_sdk/core/: datatypes.py
backup/: __init__.py  setup.py  verify_improvements.py
cli/: aptosctl.py
config/: metagraph_snapshot.json
docker/: Dockerfile
docs/: DEPLOYMENT_COMPLETED.md  IMPORT_ANALYSIS_REPORT.md  ORGANIZATION.md  PRODUCTION_DEPLOYMENT.md  README.md  RESTRUCTURING_REPORT.md
examples/: create_account.py  hd_wallet_demo.py  register_miner.py
keymanager/: __init__.py  account_manager.py
moderntensor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
moderntensor/kickoff/: hotkeys.json  mnemonic.enc  policy.skey  policy.vkey
moderntensor_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mt_aptos/agent/: miner_agent.py
mt_aptos/aptos/: contract_client.py  contract_service.py  metagraph.py  service.py
mt_aptos/aptos_core/: account_service.py  contract_client.py  contract_client.py.broken  validator_helper.py
mt_aptos/cli/: contract_cli.py  hd_wallet_cli.py  query_cli.py
mt_aptos/config/: settings.py
mt_aptos/consensus/: node.py  scoring.py  slot_coordinator.py  state.py  validator_node_consensus.py  validator_node_core.py  validator_node_refactored.py  validator_node_tasks.py
mt_aptos/examples/: create_account.py  register_miner.py
mt_aptos/keymanager/: HD_WALLET_INTEGRATION_COMPLETE.md  HD_WALLET_README.md  account_manager.py  coldkey_manager.py  decryption_utils.py  hd_wallet_demo.py  hd_wallet_manager.py  hotkey_manager.py  migration_helper.py  test_cli_integration.py  test_hotkey_system.py  test_validator_hotkey_scenarios.py  wallet_manager.py  wallet_utils.py
mt_aptos/metagraph/: __init__.py  metagraph_data.py  metagraph_datum.py  update_aptos_metagraph.py
mt_aptos/monitoring/: health.py  metrics.py
mt_aptos/network/: server.py
mt_aptos/node/: aptos_client.py
mt_aptos/service/: context.py  contract_query.py  query_service.py  register_key.py  utxos.py
mt_aptos/smartcontract/: contract_manager.py
mt_aptos/utils/: logger.py
mt_core/: __init__.py  account.py  async_client.py  bcs.py  client.py  runner.py  transactions.py  type_tag.py
mt_core/agent/: miner_agent.py  miner_agent_core.py
mt_core/cli/: aptosctl.py  contract_cli.py  cyberpunk_ui.py  cyberpunk_ui_extended.py  hd_wallet_cli.py  main.py  metagraph_cli.py  metagraph_cli_v2.py  query_cli.py  stake_cli.py  tx_cli.py  wallet_cli.py
mt_core/config/: blockchain.yaml  config_loader.py  consensus.yaml  production_config.yaml  settings.py  staking.yaml
mt_core/consensus/: bittensor_consensus.py  consensus_blockchain.py  consensus_cycle_beacon.py  consensus_errors.py  flexible_slot_coordinator.py  flexible_validator_node.py  modern_consensus.py  node.py  node.py.original_backup  scoring.py  selection.py  slot_coordinator.py  state.py  validator_node_consensus.py  validator_node_core.py  validator_node_network.py  validator_node_refactored.py  validator_node_tasks.py
mt_core/core/: datatypes.py
mt_core/core_client/: __init__.py  account_service.py  address.py  context.py  contract_client.py  validator_helper.py
mt_core/examples/: README.md  advanced_usage.py  bitcoin_staking_example.py  create_account.py  quickstart.py  register_miner.py
mt_core/keymanager/: HD_WALLET_FIXED.md  HD_WALLET_README.md  __init__.py  decryption_utils.py  encryption_utils.py  hd_wallet_demo.py  hd_wallet_manager.py  migration_helper.py  test_cli_integration.py  test_hotkey_system.py  test_validator_hotkey_scenarios.py  wallet_utils.py
mt_core/metagraph/: __init__.py  core_metagraph_adapter.py  metagraph_data.py  metagraph_datum.py  update_aptos_metagraph.py
mt_core/monitoring/: health.py
mt_core/node/: __init__.py
mt_core/service/: __init__.py  address.py  context.py  contract_query.py  contract_service.py  query_service.py  register_key.py  utxos.py
mt_core/smartcontract/: .env.template  AI_SYSTEM_ANALYSIS.md  README.md  check_all_subnets.js  check_balance.js  check_contract.js  check_demo_registration.js  check_latest_tx.js  check_registration.js  check_subnet1.js  check_subnet1_detailed.js  check_subnet1_proper.js  check_subnet1_registration.js  check_tx.js  check_tx_full.js  debug_contract.js  debug_miner_data.js  deployment_v2_1115_1753786994927.json  deployment_v2_1115_1753977282399.json  deployment_v2_1115_1753977605758.json  hardhat.config.js  hardhat.config.js.backup  hardhat.config.simple.js  package-lock.json  package.json  subnet1_summary.js  validator.py  verify_contract.js
mt_core/tests/: test_bitcoin_staking_integration 3.py  test_bitcoin_staking_integration.py
quick_cleanup_backup/backup/: README.md  requirements.txt  update_metagraph_for_core.py
scripts/: check_entities_keys.py  check_old_contract.py  check_registered_endpoints.py  find_keys.py  get_all_registered.py  quick_key_check.py  regenerate_all_keys.py
sdk/: runner.py  version.py
sdk/agent/: miner_agent.py
test_real_wallet/: metadata.json  mnemonic.enc
tests/: check_account.py  conftest.py  test_aptos_sdk.py  test_metagraph_core.py  test_metagraph_detailed.py  test_metagraph_integration.py  test_strict_consensus.py  test_validator_node.py
tokenomic/: .gitignore  README.md  hardhat.config.cjs  hardhat.config.js  package-lock.json  package.json  wallets.txt
(+296 files in other folders)
