# Remove duplicate build-system section for setuptools
# [build-system]
# requires = ["setuptools>=64.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "moderntensor"
version = "0.1.0"
description = "Moderntensor CLI"
readme = "README.md"
# Use table format required by setuptools 68.0.0
license = { text = "MIT" }
# Attempt to explicitly override license file auto-detection
license-files = []
authors = [
  { name = "son", email = "sonlearn155@gmail.com" }
]
keywords = ["cardano", "bip_utils", "cryptography"]
classifiers = [
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
  "pycardano==0.12.2",
  "bip_utils==2.9.3",
  "cryptography==42.0.8",
  "annotated-types==0.7.0",
  "anyio==4.7.0",
  "certifi==2024.12.14",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cmake==3.31.2",
  "colorama==0.4.6",
  "dependency-injector==4.45.0",
  "dnspython==2.7.0",
  "email_validator==2.2.0",
  "fastapi==0.115.6",
  "h11==0.14.0",
  "httptools==0.6.4",
  "idna==3.10",
  "loguru==0.7.3",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "pydantic_core==2.27.2",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.20",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "sniffio==1.3.1",
  "starlette==0.41.3",
  "typing_extensions==4.12.2",
  "urllib3==2.3.0",
  "uvicorn==0.34.0",
  "watchfiles==1.0.3",
  "websockets==13.0",
  "win32_setctime==1.2.0"
]

[project.urls]
homepage = "https://github.com/sonson0910"

# Scripts (entry_points) - replacement for 'console_scripts' in setup.py
[project.scripts]
mtcli = "sdk.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]

[project.optional-dependencies]
cli = ["click>=8.1.0", "rich>=13.0.0"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
    "ignore:`network` argument will be deprecated in the future.:UserWarning"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Add Hatch build configuration to specify package directory
[tool.hatch.build.targets.wheel]
packages = ["sdk"]