# Remove duplicate build-system section for setuptools
# [build-system]
# requires = ["setuptools>=64.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "moderntensor"
version = "0.2.0"
description = "A decentralized neural network training platform on Aptos blockchain"
readme = "README.md"
# Use table format required by setuptools 68.0.0
license = { text = "MIT" }
# Attempt to explicitly override license file auto-detection
license-files = []
authors = [
  { name = "ModernTensor Team", email = "info@moderntensor.net" }
]
keywords = ["cardano", "bip_utils", "cryptography"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
  "aptos-sdk>=1.0.0",
  "aptos-cli>=2.1.0",
  "bip_utils==2.9.3",
  "httpx>=0.24.0",
  "aiohttp>=3.8.4",
  "fastapi>=0.95.1",
  "uvicorn>=0.22.0",
  "pydantic>=1.10.7",
  "python-dotenv>=1.0.0",
  "asyncio>=3.4.3",
  "pyyaml>=6.0",
  "numpy>=1.24.3",
  "pandas>=2.0.1",
  "click>=8.1.3",
  "loguru>=0.7.0",
  "structlog>=23.1.0",
  "pycryptodome>=3.18.0"
]

[project.urls]
homepage = "https://github.com/sonson0910"

# Scripts (entry_points) - replacement for 'console_scripts' in setup.py
[project.scripts]
moderntensor = "sdk.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.3.1",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.3.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
    "ignore:`network` argument will be deprecated in the future.:UserWarning"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Add Hatch build configuration to specify package directory
[tool.hatch.build.targets.wheel]
packages = ["sdk"]